remove overflow entirely on results_body, restoring sticky filmstrips fixes #2650

--- a/www/assets/css/pagestyle2.css
+++ b/www/assets/css/pagestyle2.css
@@ -587,7 +587,6 @@ span.lh-flag.poor {
   margin: 1em -3rem !important;
   background-clip: padding-box;
   position: relative;
-  overflow: hidden;
 }
 
 @media (max-width: 87.5em) {
@@ -597,10 +596,6 @@ span.lh-flag.poor {
     box-shadow: none;
     margin: 0 0 !important;
   }
-}
-
-.experiments_grades {
-  overflow: visible;
 }
 
 .form_clip .grade_header:first-of-type {
